<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:padding="8dp">

                <FrameLayout
                    android:id="@+id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="8dp">

                    <ImageView
                        android:id="@+id/image_member"
                        android:layout_width="260dp"
                        android:layout_height="200dp"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/image_member" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_rating"
                        android:drawableEnd="@drawable/ic_star_black_24dp"
                        android:drawablePadding="5dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:paddingHorizontal="8dp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        tools:text="@string/rating" />

                    <ImageView
                        android:id="@+id/ic_favourite"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="end|bottom"
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_fav"
                        android:contentDescription="@string/love" />


                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:layout_below="@+id/image"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_item_nama_member"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:text="Nama Member" />

                    <com.codesgood.views.JustifiedTextView
                        android:id="@+id/detail_more_member"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginVertical="12dp"
                        android:text="@string/more_detail"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>


            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal">

                <TextView

                    android:id="@+id/content_detail"
                    android:text="@string/deskripsi"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sumber" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:text="@string/URL" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:justificationMode="inter_word"
            tools:text="Deskripsi" />

    </LinearLayout>
</ScrollView>